--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.baseBarbearia</string>
+	<string>com.example.barbershopBaseapp</string>
 	<key>PROJECT_ID</key>
 	<string>easecortebaseversion-7100f</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:619249321420:ios:843731b401bda8a4a64969</string>
+	<string>1:619249321420:ios:1fcf6fa432d0452aa64969</string>
 </dict>
 </plist>
